[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/cbar.gd" type="Script" id=1]
[ext_resource path="res://ui/fonts/seguihis.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/fonts/Arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/new_year.gd" type="Script" id=4]
[ext_resource path="res://ui/themes/text_entry_border.tres" type="Theme" id=5]
[ext_resource path="res://ui/themes/default_button.tres" type="Theme" id=6]
[ext_resource path="res://ui/icons/application_icon.png" type="Texture" id=7]
[ext_resource path="res://ui/icons/buttons/hide_password.png" type="Texture" id=8]

[sub_resource type="Animation" id=14]
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 64, -0.25, 0, 0.25, 0, 32, -0.25, 0, 0.25, 0, 64, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.8 )
}

[sub_resource type="DynamicFont" id=1]
size = 25
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 0.0392157 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=13]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0.215686 )
border_width_left = 8
border_width_right = 8
border_color = Color( 0.6, 0.6, 0.6, 0.215686 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.6, 0.6, 0.6, 0.156863 )
border_width_left = 8
border_width_right = 8
border_color = Color( 0.6, 0.6, 0.6, 0.156863 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 0.0392157 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=22]
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=23]
size = 11
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=20]
resource_name = "next_page"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 1.48988, -91.2009, -1024, -1.55128, 85.4131, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[sub_resource type="Animation" id=21]
resource_name = "show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 608 ), Vector2( 16, 568 ) ]
}

[sub_resource type="DynamicFont" id=8]
use_filter = true
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="backround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.997
margin_bottom = 1.79999
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="icon" type="TextureRect" parent="backround"]
margin_left = 448.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 7 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="backround/icon"]
autoplay = "icon"
anims/icon = SubResource( 14 )

[node name="title" type="Label" parent="backround"]
margin_left = 320.0
margin_top = 200.0
margin_right = 704.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 1 )
text = "It's a new year!"
align = 1
valign = 1

[node name="pages" type="Control" parent="."]
margin_top = 240.0
margin_right = 2048.0
margin_bottom = 600.0

[node name="choice" type="Panel" parent="pages"]
margin_left = 320.0
margin_top = 16.0
margin_right = 704.0
margin_bottom = 208.0
custom_styles/panel = SubResource( 10 )

[node name="label" type="RichTextLabel" parent="pages/choice"]
margin_left = 16.0
margin_top = 8.0
margin_right = 368.0
margin_bottom = 80.0
custom_colors/default_color = Color( 1, 1, 1, 0.627451 )
custom_fonts/normal_font = SubResource( 13 )
text = "If you are not the same administrator as last year, please setup a new account. Otherwise, renew your existing account for this year. Note that making a new account will not change the current student settings."

[node name="renew" type="Button" parent="pages/choice"]
margin_left = 64.0
margin_top = 96.0
margin_right = 320.0
margin_bottom = 128.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 17 )
text = "Renew Existing Account                   >"
align = 2

[node name="new" type="Button" parent="pages/choice"]
margin_left = 64.0
margin_top = 136.0
margin_right = 320.0
margin_bottom = 168.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 17 )
text = "Setup New Account                          >"
align = 2

[node name="password" type="Panel" parent="pages"]
margin_left = 1344.0
margin_top = 16.0
margin_right = 1728.0
margin_bottom = 208.0
custom_styles/panel = SubResource( 18 )

[node name="label" type="RichTextLabel" parent="pages/password"]
margin_left = 64.0
margin_top = 40.0
margin_right = 320.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 888, 208 )
custom_colors/default_color = Color( 1, 1, 1, 0.627451 )
custom_fonts/normal_font = SubResource( 19 )
bbcode_enabled = true
bbcode_text = "[center]Enter the current password to renew the existing account.[/center]"
text = "Enter the current password to renew the existing account."

[node name="password" type="LineEdit" parent="pages/password"]
margin_left = 64.0
margin_top = 112.0
margin_right = 320.0
margin_bottom = 144.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 22 )
max_length = 12
secret = true
secret_character = "‚óè"
context_menu_enabled = false
clear_button_enabled = true
selecting_enabled = false
placeholder_text = "Password"
placeholder_alpha = 0.2
caret_blink = true
caret_blink_speed = 0.5

[node name="hide_password" type="TextureButton" parent="pages/password"]
margin_left = 328.0
margin_top = 112.0
margin_right = 360.0
margin_bottom = 144.0
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="indicator" type="Label" parent="pages"]
margin_left = 1352.0
margin_top = 176.0
margin_right = 1720.0
margin_bottom = 192.0
align = 1
valign = 1

[node name="continue" type="Button" parent="pages"]
margin_left = 1960.0
margin_top = 312.0
margin_right = 2033.0
margin_bottom = 344.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
text = "Continue"

[node name="forgot_password" type="Button" parent="pages"]
margin_left = 1480.0
margin_top = 320.0
margin_right = 1592.0
margin_bottom = 352.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
custom_colors/font_color_hover = Color( 0, 0.835294, 1, 1 )
custom_fonts/font = SubResource( 23 )
text = "Forgot Password?"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="pages"]
playback_speed = 4.0
anims/next_page = SubResource( 20 )

[node name="back" type="Button" parent="."]
margin_left = 16.0
margin_top = 608.0
margin_right = 58.0
margin_bottom = 632.0
rect_pivot_offset = Vector2( 0, 24 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 0, 0.486275, 1, 1 )
text = "Back"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="back"]
anims/show = SubResource( 21 )

[node name="cbar" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 32.0
script = ExtResource( 1 )

[node name="exit" type="Button" parent="cbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 998.499
margin_top = 2.584
margin_right = -2.50098
margin_bottom = -4.416
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "X"
flat = true

[connection signal="pressed" from="pages/choice/renew" to="." method="_on_renew_pressed"]
[connection signal="pressed" from="pages/choice/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="pages/password/hide_password" to="." method="_on_hide_password_pressed"]
[connection signal="pressed" from="pages/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="pages/forgot_password" to="." method="_on_forgot_password_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="gui_input" from="cbar" to="cbar" method="_on_cbar_gui_input"]
[connection signal="pressed" from="cbar/exit" to="cbar" method="_on_exit_pressed"]
